[package]
name = "journ-core"
version = "0.2.1-beta.4"
authors = ["Mark Barrett <mark@barrett.uk>"]
edition = "2024"
license = "AGPL-3"
description = "Plaintext Accounting Journal"

[dependencies]
#time = "0.1.42"
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = "0.10.3"
num-format = { version = "0.4", features = ["with-system-locale"] }
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
itertools = "*"
#tokio = { version = "1.6.1", features = [ "rt", "rt-multi-thread", "macros", "sync" ]}
#derive_builder = "0.9.0"
env_logger = "*"
tempfile = "3"
ansi_term = "0.12"
inline_colorization = "0.1.5"
term_size = "1.0.0-beta1"
atty = "0.2"
tinyvec = "1.6.0"
smallvec = "1.4.2"
linked_hash_set = "0.1.4"
rayon = "1.5.3"
nalgebra = "0.32.4"
nom = "7.1.3"
nom_locate = "*"
bumpalo = { version = "3.14.0", features = ["allocator_api"] }
bumpalo-herd = "0.1.2"
thread_local = "1.1.3"
# Disabled, see below
#pyembed = { version = "0.24.0", optional = true }
yaml-rust = "0.4.5"
# This is stuck at 0.17.3 while pyembed is at 0.24.0. This is because both depend on
# different versions of pyo3-ffi, but only one version can be linked.
pyo3 = { version = "0.25.0", features = ["rust_decimal"] }
normalize-path = "0.2.1"


# Override transitive dependencies
# Used by nalgebra and pyo3. Older versions do not compile on nightly.
#proc-macro2 = "1.0.66"

#[dependencies.cpython]
#version = "0.7.1"

#[dependencies.pyo3]
#version = "=0.20.3"

[dependencies.log]
version = "0.4"
features = ["max_level_trace", "release_max_level_trace"]

[dev-dependencies]
indoc = "1.0.7"

#[dev-dependencies.core-test-utils]
#path = "test_utils"

[features]
# This is disabled due to relying on a too old version of pyo3-ffi and Python 3.
# Also, holds back proc-macro2 to 1.0.66 which is incompatible with future versions of clap >= 3.3
# Once newer versions are released, this can be re-enabled.
#python-embedded = ["pyembed"]
# cfg[(test)] is only for unit tests. Need this hack to conditionally enable code used for integration tests until
# a better way comes along.
testing = []

