[package]
name = "journ-python"
version = "0.1.0"
authors = ["Mark Barrett <mark@barrett.uk>"]
edition = "2018"

[lib]
name = "journ"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.34"
env_logger = "*"
ansi_term = "0.12.1"
atty = "0.2"
bumpalo-herd = "0.1.2"
nom = "7.1.3"
rust_decimal = "1.34.2"
pyo3 = { version = "0.20.3", features = ["extension-module", "chrono"] }

[dependencies.journ-core]
path = "../core"

# We need this so that we can register the tax module, which we need to do
# to avoid "unknown directive" error for capitalgains during parse.
[dependencies.journ-cag]
path = "../cag"

