[package]
name = "journ-python"
version = "0.1.1-beta.11"
authors = ["Mark Barrett <mark@barrett.uk>"]
edition = "2018"

[lib]
name = "journ"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.34"
env_logger = "*"
ansi_term = "0.12.1"
atty = "0.2"
bumpalo-herd = "0.1.2"
nom = "7.1.3"
rust_decimal = "1.34.2"
# As we're a python extension, we use an ABI3 compatible version of pyo3 to ensure that we can be loaded by any Python 3.9+ interpreter.
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py39", "chrono", "chrono-tz", "rust_decimal"] }

[dependencies.journ-core]
path = "../core"

# We need this so that we can register the tax module, which we need to do
# to avoid "unknown directive" error for capitalgains during parse.
[dependencies.journ-cag]
path = "../cag"
